feature: add departments module
